--- a/pod.yaml
+++ b/pod.yaml
@@ -27,5 +27,5 @@ spec:
     spec:
       containers:
         - name: hello
-          image: iammithran/k8simage:latest
+          image: raja051991/k8simage:latest
           imagePullPolicy: Always
